<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/welcomescreenlinear"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
    <ImageView
        android:id="@+id/image"
        android:layout_marginBottom="185dp"
        android:src="@drawable/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_getstarted"
        android:background="@drawable/rounded_btn"
        android:textColor="@color/white"
        android:text="@string/getstarted"
        android:layout_marginTop="600dp"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_below="@id/btn_getstarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView

        android:textColor="#7c7c7c"
        android:text="@string/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/login"
        android:textColor="#7d71d0"
        android:textStyle="bold"
         />
    </LinearLayout>
</RelativeLayout>