<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".health.Activity.LoginwithnumberActivity">

    <TextView
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_slab_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/mobile"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:fontFamily="@font/roboto_slab_bold" />

    <TextView
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numbertoreach"/>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="6dp"
        app:cardElevation="10dp"
        android:background="@color/white"
        android:layout_marginTop="100dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <!--<com.rilixtech.CountryCodePicker-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:id="@+id/ccp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:ccp_defaultNameCode="IN"-->
            <!--app:ccp_defaultCode="91"/>-->
        <!--<EditText-->
            <!--android:layout_marginLeft="30dp"-->
            <!--android:id="@+id/phone_number_edt"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="8520369741"-->
            <!--android:inputType="phone"/>-->


            <EditText
                android:drawablePadding="55dp"
                android:hint="@string/email_address"
                android:id="@+id/edit_email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_verify"
        android:background="@drawable/rounded_btn"
        android:textColor="@color/white"
        android:text="@string/verify"
      android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

</LinearLayout>