<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".health.Activity.PasswordActivity">

    <TextView
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_slab_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifynum"/>

    <TextView
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:text="@string/texton"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

   <LinearLayout
       android:layout_marginLeft="15dp"
       android:layout_marginTop="105dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <EditText
            android:maxLength="1"
           android:inputType="number"
           android:id="@+id/otp1"
           android:layout_width="50dp"
           android:layout_height="50dp" />

       <EditText
           android:inputType="number"
           android:maxLength="1"
           android:layout_marginLeft="15dp"
            android:id="@+id/otp2"
           android:layout_width="50dp"
           android:layout_height="50dp" />

       <EditText
           android:inputType="number"
           android:maxLength="1"
           android:layout_marginLeft="15dp"
           android:id="@+id/otp3"
           android:layout_width="50dp"
           android:layout_height="50dp" />

       <EditText
           android:inputType="number"
           android:maxLength="1"
           android:layout_marginLeft="15dp"
           android:id="@+id/otp4"
           android:layout_width="50dp"
           android:layout_height="50dp" />
       <EditText
           android:inputType="number"
           android:maxLength="1"
           android:layout_marginLeft="15dp"
           android:id="@+id/otp5"
           android:layout_width="50dp"
           android:layout_height="50dp" />

       <EditText
           android:inputType="number"
           android:maxLength="1"
           android:layout_marginLeft="15dp"
           android:id="@+id/otp6"
           android:layout_width="50dp"
           android:layout_height="50dp" />
   </LinearLayout>

    <TextView
        android:textSize="16sp"
        android:textColor="@color/theme"
        android:textStyle="bold"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resend_code"
        android:text="@string/Resend"/>

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_continue"
        android:background="@drawable/rounded_btn"
        android:textColor="@color/white"
        android:text="@string/con"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

</LinearLayout>