<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_label_size"
            style="@style/Widget.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_big"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/label_date"
            android:fontFamily="@string/roboto_regular"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/h1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            app:layout_constraintLeft_toLeftOf="@+id/txt_label_size"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_label_size"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1">


            <RadioGroup
                android:id="@+id/datelist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </RadioGroup>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/txt_label_time"
            style="@style/Widget.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/label_time"
            android:fontFamily="@string/roboto_regular"
            app:layout_constraintLeft_toLeftOf="@+id/txt_label_size"
            app:layout_constraintTop_toBottomOf="@+id/h1" />


        <HorizontalScrollView
            android:id="@+id/h2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            app:layout_constraintLeft_toLeftOf="@+id/txt_label_time"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_label_time"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1">


            <RadioGroup
                android:id="@+id/timelist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </RadioGroup>


        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
